# TimeZone-POS

./: .editorconfig  LICENSE.md  README.md  esbuild.config.js  frappe-vue-style.js  package.json  pyproject.toml  vite.config.js
posawesome/: hooks.py  patches.txt
posawesome/fixtures/: custom_field.json
posawesome/patches/: add_item_price_index.py
posawesome/posawesome/api/: posapp.py
posawesome/posawesome/doctype/pos_closing_shift/: pos_closing_shift.py
posawesome/public/js/: offline.js  sw.js
posawesome/public/js/posapp/: posapp.js
posawesome/public/js/posapp/components/: Navbar.vue  OfflineInvoices.vue
posawesome/public/js/posapp/components/payments/: Pay.vue
posawesome/public/js/posapp/components/pos/: ClosingDialog.vue  Customer.vue  Invoice.vue  ItemsSelector.vue  ItemsTable.vue  OpeningDialog.vue  Payments.vue  invoiceItemMethods.js  invoiceOfferMethods.js  invoiceShortcuts.js
posawesome/public/js/posapp/plugins/: print.js
posawesome/public/js/posapp/workers/: itemWorker.js
