[project]
name = "posawesome"
authors = [
    { name = "Youssef Restom", email = "youssef@totrox.com"},
    { name = "Abdul Manan", email="defendicon@github.com"},
    { name = "ASA Technologies", email = "dev@asaerp.com"},
    { name = "Ateeq-Raheman", email = "ateeqraheman001195@gmail.com"},
    { name = "Ahmed Osama", email = "eng.ahmed.osama.1190@gmail.com"},
    { name = "Samarth Upare", email = "samarth.upare@redtra.com"},
]
description = "POS project that's simply awesome"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # Core dependencies
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"


[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
erpnext = ">=15.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "RUF001", # string contains ambiguous unicode character
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true


[project.urls]
Homepage = "https://github.com/defendicon/POS-Awesome-V15"
Repository = "https://github.com/defendicon/POS-Awesome-V15.git"
"Bug Reports" = "https://github.com/defendicon/POS-Awesome-V15/issues"